# prompt-generator

./: README.md  logistic_regression_model.onnx  token.pickle
python-microservice/: app.py  email_processing.py  gmail_api.py  gmail_setup.py  requirements.txt  run.py  sentiment_api.py  sentiment_setup.py
sentimental_analysis/: model.pkl  sentimental_mode.py  vectorizer.pkl
src/: .env  Cargo.toml
src/.sqlx/: query-15496edb22ae3fbf890f9b188114cf24769a86139b47603b21c2a38a37c9b498.json  query-546fd0953b20b8942301f0ba724d5248d7622da86f4fdff9fb99f4cded4b6b43.json  query-9ba9a689e826852a549444a2fcef0f2b4b25928d9793ce0fe7771c7d39592c04.json
src/migrations/: 1_setup.sql  2_user.sql  3_business.sql
src/src/: main.rs
